# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-05-15 Michael Truog   <mjtruog at protonmail dot com>

    * Isolate aspect function exception errors in the same way for
      both internal and external services with the same logging.
      Now aspects_init_after functions execution are included in
      the initialization timeout time period.
      The execution of aspects_request_before functions and
      aspects_request_after functions are already included in the
      service request timeout decrement
      (when the service configuration option
       request_timeout_adjustment is true).
    * Fix the timeout_terminate (TIMEOUT_TERMINATE_MIN) used before
      external services are initialized
    * Change the C CloudI API function name
      cloudi_info_key_value_destroy to
      cloudi_info_key_value_parse_destroy
    * Change the C++ CloudI API function name
      info_key_value_destroy to
      info_key_value_parse_destroy
    * Change the C++ CloudI API key_value functions to be static
      (info_key_value_parse and info_key_value_parse_destroy)
    * Add info_key_value_new function to the C/C++ CloudI API
    * Add auto-free functions to the C/C++ CloudI API
      (free_name, free_pattern, free_request_info, free_request,
       free_response_info, free_response, free_with_delete)
      for data passed to forward or return

2020-05-14 Michael Truog   <mjtruog at protonmail dot com>

    * Fix problem when the Dispatcher variable is used in an
      aspects_init_after (service configuration option) function
      with duo_mode set to false
    * Fix infrequent race condition with cloudi_service functions returning
      {error, timeout} due to gen_server:call/3 use with a timeout value.
      The problem would occur with high load and only impacts
      internal services.  Fixes the Erlang messaging integration test.

2020-05-13 Michael Truog   <mjtruog at protonmail dot com>
